# pysubstream

./: .pre-commit-config.yaml  Makefile  README.md  llms.txt  mkdocs.yml  pyproject.toml  pyrightconfig.json  zensical.toml
.github/workflows/: run_tests.yml
docs/: api.md  cookbook.md  index.md  installation.md
requirements/: requirements-dev.txt  requirements.txt
src/anysub/: __init__.py  utils.py
src/pysubstream/: __init__.py
tests/: anysub_test.py  import_test.py  pysubstream_test.py
