[project]
name = "pysubstream"
version = "0.0.1"
description = "subprocess.run() that streams and captures stdout/stderr simultaneously"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Panos Mavrogiorgos", email = "pmav99@gmail.com" },
]
dependencies = [
    "anyio[trio]",
]

[tool.poetry]
packages = [
    { include = "pysubstream", from = "src" },
]

[dependency-groups]
dev = [
    "anyio",
    "ipdb",
    "mypy",
    "pytest",
    "pytest-cov",
]
docs = [
    "mkdocstrings",
    "mkdocstrings-python",
    "zensical",
]

[tool.poetry-dynamic-versioning]
enable = true
dirty = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--verbose", "--showlocals", "--tb=short", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli = true
log_cli_level = "info"
pythonpath = [
  "src"
]
testpaths = [
  "tests",
]
filterwarnings = [
    "error",
    'ignore:distutils Version classes are deprecated. Use packaging.version instead:DeprecationWarning',
    'ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning',
]


[tool.mypy]
python_version = "3.11"
plugins = []
show_column_numbers = true
show_error_context = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
strict = true
ignore_missing_imports = true
disable_error_code = [ ]
enable_error_code = [
  "comparison-overlap",
  "explicit-override",
  "ignore-without-code",
  "no-any-return",
  "no-any-unimported",
  "no-untyped-call",
  "no-untyped-def",
  "possibly-undefined",
  "redundant-cast",
  "redundant-expr",
  "redundant-self",
  "truthy-bool",
  "truthy-iterable",
  "type-arg",
  "unimported-reveal",
  "unreachable",
  "unused-ignore",
]

# mypy per-module options:
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = true

[tool.black]
target-version = ["py311"]
line-length = 120

[tool.ruff]
target-version = "py311"
line-length = 120
lint.select = [
  "ARG",  # flake8-unused-argument
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "C90",  # mccabe
  # "COM",  # flake8-commas — conflicts with ruff formatter
  # "D",  # pydocstyle
  "DTZ",  # flake8-datetimez
  "E",  # pycodestyle
  "EXE",  # flake8-executable
  "FA",  # flake8-future-annotations
  "FBT",  # flake8-boolean-trap
  "F",  # pyflakes
  "ICN",  # flake8-import-conventions
  "I",  # isort
  "ISC",  # flake8-implicit-str-concat
  "N",  # pep8-naming
  "PL",  # Pylint
  "Q",  # flake8-quotes
  "RUF",  # Unused noqa
  "S",  # flake8-bandit
  "TID",  # flake8-tidy-imports
  "T",  # flake8-print
  "T10",  # flake8-debugger
  "UP",  # pyupgrade
  "W",  # Warning
  "YTT",  # flake8-2020
]
lint.ignore = [
  "N812",  # lowercase-imported-as-non-lowercase
  "PLR0913",  # too-many-arguments
  "S101",  # assert
  "PLC0415",  # import-outside-top-level (intentional deferred imports)
]
lint.per-file-ignores."__init__.py" = [
  "F401",  # Unused imports (re-exports)
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.codespell]
skip = '*.po,*.ts,*.lock'
